--- a/EncryptedLinks/EncryptedLinks.csproj
+++ b/EncryptedLinks/EncryptedLinks.csproj
@@ -69,21 +69,13 @@
     <Content Include="Content\css\bootstrap.css" />
     <Content Include="Content\css\bootstrap.min.css" />
     <Content Include="Content\fonts\glyphicons-halflings-regular.svg" />
-    <Content Include="Images\icon1.png" />
-    <Content Include="Images\icon2.png" />
-    <Content Include="Images\icon3.png" />
-    <Content Include="Images\icon4.png" />
-    <Content Include="Images\key-64.png" />
+    <Content Include="Images\gear.png" />
     <Content Include="Images\key-icon1.png">
       <OpcRelationship>manifest-icon</OpcRelationship>
     </Content>
-    <Content Include="Images\postIcon.png" />
-    <Content Include="Images\key.svg" />
-    <Content Include="Images\link.svg" />
-    <Content Include="Images\gear.svg" />
-    <Content Include="Images\question.svg" />
-    <Content Include="Images\Security-Key-icon.png" />
-    <Content Include="Images\siteIcon.png" />
+    <Content Include="Images\key.png" />
+    <Content Include="Images\link.png" />
+    <Content Include="Images\question.png" />
     <Content Include="Links\CustomForm.aspx" />
     <Content Include="Links\Elements.xml" />
     <Content Include="Links\Files\ConfigForm.aspx" />
@@ -139,7 +131,6 @@
     <Content Include="Content\App.css" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Images\AppIcon.png" />
     <Content Include="Images\Elements.xml" />
     <None Include="Images\SharePointProjectItem.spdata">
       <SharePointProjectItemId>{64164f85-9b2a-4be9-b921-d41edd99b44f}</SharePointProjectItemId>
