--- a/EncryptedLinks/EncryptedList.csproj
+++ b/EncryptedLinks/EncryptedList.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{82302822-DF3C-44DF-80E9-2DF59CCDCB04}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>EncryptedLinks</RootNamespace>
-    <AssemblyName>EncryptedLinks</AssemblyName>
+    <RootNamespace>EncryptedList</RootNamespace>
+    <AssemblyName>EncryptedList</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <TargetOfficeVersion>15.0</TargetOfficeVersion>
     <FileAlignment>512</FileAlignment>
