v 1.0.0.5: bugfix - IE 8 validate console is available before use

--- a/EncryptedLinks/EncryptedList.csproj
+++ b/EncryptedLinks/EncryptedList.csproj
@@ -45,6 +45,7 @@
     <UseVSHostingProcess>false</UseVSHostingProcess>
   </PropertyGroup>
   <ItemGroup>
+    <None Include="Content\app.master" />
     <None Include="Content\fonts\glyphicons-halflings-regular.eot" />
     <None Include="Content\fonts\glyphicons-halflings-regular.ttf" />
     <None Include="Content\fonts\glyphicons-halflings-regular.woff" />
